Добавил логотип сайта

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,5 +1,5 @@
 html {
-  background-image: url('../images/Bg.png');
+  background-image: url(../images/Bg.png);
 	background-color: var(--color-dark);
   background-repeat: no-repeat;
   background-position: center center;
