--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@
 	--color-accent: #D3F85A;
 	--color-gray: #FFFFFD;
 	--color-gray-alt: #838382;
+	--color-purple: #9333EA;
 
 	--border: 1px solid var(--color-accent);
 	--border-radius: 8px;
