--- a/css/styles.css
+++ b/css/styles.css
@@ -123,10 +123,7 @@ body {
 /**
  Приводим к единому цвету svg-элементы
 */
-svg *[fill] {
-  fill: currentColor;
-}
-
+/*  svg *[fill] { fill: currentColor } */
 svg *[stroke] {
   stroke: currentColor;
 }
@@ -165,15 +162,15 @@ svg * {
   font-display: swap;
 }
 @font-face {
-  font-family: "Canela";
-  src: url("../fonts/Canela-Regular.woff2") format("woff2");
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Canela";
-  src: url("../fonts/Canela-Medium.woff2") format("woff2");
+  src: url("../fonts/Montserrat-Medium.woff2") format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -188,6 +185,7 @@ svg * {
   --color-accent: #D3F85A;
   --color-gray: #FFFFFD;
   --color-gray-alt: #838382;
+  --color-purple: #9333EA;
   --border: 1px solid var(--color-accent);
   --border-radius: 8px;
   --border-radius-image: 16px; /* Закругление углов картинок */
@@ -503,17 +501,17 @@ h4,
   align-items: center;
 }
 .header__logo {
-  width: 200px;
+  width: 180px;
   height: auto;
 }
 @media (max-width: 1023px) {
   .header__logo {
-    max-width: 175px;
+    max-width: 145px;
   }
 }
 @media (max-width: 767px) {
   .header__logo {
-    width: 166px;
+    width: 125px;
   }
 }
 @media (max-width: 1023px) {
@@ -558,7 +556,7 @@ h4,
   translate: -50%;
   width: 0;
   height: 2px;
-  background-color: var(--color-accent);
+  background-color: var(--color-purple);
   transition-duration: inherit;
 }
 @media (max-width: 1023px) {
@@ -664,7 +662,12 @@ h4,
 }
 
 .artwork {
-  background-color: red;
+  width: 60%;
+  height: auto;
+  margin-inline: auto;
+  border: 3px solid var(--color-purple);
+  border-radius: var(--border-radius);
+  transform: scaleX(-1);
 }
 
 .hero {
@@ -760,9 +763,10 @@ h4,
     font-size: 32px;
   }
 }
-.hero__artwork {
-  width: 100px;
-  aspect-ratio: 1;
+.hero__artworks {
+  max-width: 575px;
+  width: 100%;
+  height: auto;
 }
 
 .hero-card {
@@ -842,6 +846,15 @@ h4,
   .service-card:active {
     scale: 1.05;
   }
+}
+.service-card__images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 361px;
+  max-height: 340px;
+  overflow: hidden;
+  border-radius: var(--border-radius-image);
 }
 .service-card__image {
   align-self: center;
