--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -15,8 +15,8 @@
 }
 
 @font-face {
-	font-family: 'Canela';
-	src: url('../fonts/Canela-Regular.woff2') format('woff2');
+	font-family: 'Montserrat';
+	src: url('../fonts/Montserrat-Regular.woff2') format('woff2');
 	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
 	font-family: 'Canela';
-	src: url('../fonts/Canela-Medium.woff2') format('woff2');
+	src: url('../fonts/Montserrat-Medium.woff2') format('woff2');
 	font-weight: 500;
 	font-style: normal;
 	font-display: swap;
