--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,7 @@ html {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -657,6 +658,11 @@ h4,
 }
 @media (max-width: 767px) {
   .section__header:not(:last-child) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+    text-align: center;
     margin-bottom: 32px;
   }
 }
@@ -1129,14 +1135,14 @@ h4,
 }
 
 .footer {
-  padding-block: var(--section-padding-y);
+  padding-bottom: var(--section-padding-y);
 }
 .footer__inner {
   color: var(--color-light);
 }
 .footer__body {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-inline: 18px;
   padding-bottom: 48px;
   border-bottom: 1px solid #fff;
@@ -1150,7 +1156,7 @@ h4,
 .footer__content {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   row-gap: 20px;
 }
 .footer__menu-list {
