--- a/styles/blocks/_footer.scss
+++ b/styles/blocks/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	padding-block: var(--section-padding-y);
+	padding-bottom: var(--section-padding-y);
 
 	&__inner {
 		color: var(--color-light);
@@ -7,7 +7,7 @@
 
 	&__body {
 		display: flex;
-		justify-content: space-between;
+		justify-content: center;
 		margin-inline:18px;
 		padding-bottom: 48px;
 		border-bottom: 1px solid #fff;
@@ -21,7 +21,7 @@
 	&__content {
 		display: flex;
 		flex-direction: column;
-		align-items: start;
+		align-items: center;
 		row-gap: 20px;
 	}
 
