--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -15,6 +15,11 @@
 			margin-bottom: 64px;
 
 			@include mobile {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				row-gap: 20px;
+				text-align: center;
 				margin-bottom: 32px;
 			}
 		}
