--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 /**
   Нормализация блочной модели
  */
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 *,
 *::before,
 *::after {
@@ -1133,6 +1134,125 @@ h4,
   -moz-column-gap: 12px;
        column-gap: 12px;
 }
+.soc1als__item {
+  display: inline-flex;
+}
+.soc1als__item .soc1als__link {
+  display: block;
+  position: relative;
+  margin: 0 25px;
+  text-decoration: none;
+  color: #fff;
+}
+.soc1als__item .soc1als__link .soc1als__layer {
+  width: 55px;
+  height: 55px;
+  transition: transform 0.3s;
+}
+.soc1als__item .soc1als__link .soc1als__layer span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+.soc1als__item .soc1als__link .soc1als__layer span.fab {
+  font-size: 30px;
+  line-height: 55px;
+  text-align: center;
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer {
+  transform: rotate(-35deg) skew(20deg);
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer span:nth-child(1) {
+  opacity: 0.2;
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer span:nth-child(2) {
+  opacity: 0.4;
+  transform: translate(5px, -5px);
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer span:nth-child(3) {
+  opacity: 0.6;
+  transform: translate(10px, -10px);
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer span:nth-child(4) {
+  opacity: 0.8;
+  transform: translate(15px, -15px);
+}
+.soc1als__item .soc1als__link:hover .soc1als__layer span:nth-child(5) {
+  opacity: 1;
+  transform: translate(20px, -20px);
+}
+.soc1als__item .soc1als__link:hover:nth-child(1) .soc1als__layer span {
+  box-shadow: -1px 1px 3px #4267B2;
+}
+.soc1als__item .soc1als__link:hover:nth-child(2) .soc1als__layer span {
+  box-shadow: -1px 1px 3px #1DA1F2;
+}
+.soc1als__item .soc1als__link:hover:nth-child(3) .soc1als__layer span {
+  box-shadow: -1px 1px 3px #E1306C;
+}
+.soc1als__item .soc1als__link:hover:nth-child(4) .soc1als__layer span {
+  box-shadow: -1px 1px 3px #2867B2;
+}
+.soc1als__item .soc1als__link:hover:nth-child(5) .soc1als__layer span {
+  box-shadow: -1px 1px 3px #FF0000;
+}
+.soc1als__item .soc1als__link:hover .soc1als__text {
+  bottom: -35px;
+  opacity: 1;
+}
+.soc1als__item .soc1als__link:nth-child(1) .soc1als__layer span {
+  color: #4267B2;
+  border-color: #4267B2;
+}
+.soc1als__item .soc1als__link:nth-child(1) .soc1als__text {
+  color: #4267B2;
+  border-color: #4267B2;
+}
+.soc1als__item .soc1als__link:nth-child(2) .soc1als__layer span {
+  color: #1DA1F2;
+  border-color: #1DA1F2;
+}
+.soc1als__item .soc1als__link:nth-child(2) .soc1als__text {
+  color: #1DA1F2;
+  border-color: #1DA1F2;
+}
+.soc1als__item .soc1als__link:nth-child(3) .soc1als__layer span {
+  color: #E1306C;
+  border-color: #E1306C;
+}
+.soc1als__item .soc1als__link:nth-child(3) .soc1als__text {
+  color: #E1306C;
+  border-color: #E1306C;
+}
+.soc1als__item .soc1als__link:nth-child(4) .soc1als__layer span {
+  color: #2867B2;
+  border-color: #2867B2;
+}
+.soc1als__item .soc1als__link:nth-child(4) .soc1als__text {
+  color: #2867B2;
+  border-color: #2867B2;
+}
+.soc1als__item .soc1als__link:nth-child(5) .soc1als__layer span {
+  color: #FF0000;
+  border-color: #FF0000;
+}
+.soc1als__item .soc1als__link:nth-child(5) .soc1als__text {
+  color: #FF0000;
+  border-color: #FF0000;
+}
+.soc1als__text {
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: bottom 0.3s ease, opacity 0.3s ease;
+}
 
 .footer {
   padding-bottom: var(--section-padding-y);
@@ -1157,7 +1277,7 @@ h4,
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 20px;
+  row-gap: 40px;
 }
 .footer__menu-list {
   display: flex;
