--- a/styles/blocks/_soc1als.scss
+++ b/styles/blocks/_soc1als.scss
@@ -1,6 +1,191 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+
 .soc1als {
-	&__list {
-		display: flex;
-		column-gap: 12px;
+  &__list {
+    display: flex;
+    column-gap: 12px;
+  }
+
+	$color_1: #fff;
+	$color_2: #4267B2;
+	$color_3: #1DA1F2;
+	$color_4: #E1306C;
+	$color_5: #2867B2;
+	$color_6: #FF0000;
+	$border-color_1: #4267B2;
+	$border-color_2: #1DA1F2;
+	$border-color_3: #E1306C;
+	$border-color_4: #2867B2;
+	$border-color_5: #FF0000;
+	
+	&__item {
+		display: inline-flex;
+		
+		.soc1als__link {
+			display: block;
+			position: relative;
+			margin: 0 25px;
+			text-decoration: none;
+			color: $color_1;
+
+			.soc1als__layer {
+				width: 55px;
+				height: 55px;
+				transition: transform 0.3s;
+
+				span {
+					position: absolute;
+					top: 0;
+					left: 0;
+					height: 100%;
+					width: 100%;
+					border: 1px solid #fff;
+					border-radius: 5px;
+					transition: all 0.3s;
+				}
+
+				span.fab {
+					font-size: 30px;
+					line-height: 55px;
+					text-align: center;
+				}
+			}
+
+			&:hover {
+				.soc1als__layer {
+					transform: rotate(-35deg) skew(20deg);
+					
+					span {
+						&:nth-child(1) {
+							opacity: 0.2;
+						}
+						&:nth-child(2) {
+							opacity: 0.4;
+							transform: translate(5px, -5px);
+						}
+						&:nth-child(3) {
+							opacity: 0.6;
+							transform: translate(10px, -10px);
+						}
+						&:nth-child(4) {
+							opacity: 0.8;
+							transform: translate(15px, -15px);
+						}
+						&:nth-child(5) {
+							opacity: 1;
+							transform: translate(20px, -20px);
+						}
+					}
+				}
+				&:nth-child(1) {
+					.soc1als__layer {
+						span {
+							box-shadow: -1px 1px 3px #4267B2;
+						}
+					}
+				}
+				&:nth-child(2) {
+					.soc1als__layer {
+						span {
+							box-shadow: -1px 1px 3px #1DA1F2;
+						}
+					}
+				}
+				&:nth-child(3) {
+					.soc1als__layer {
+						span {
+							box-shadow: -1px 1px 3px #E1306C;
+						}
+					}
+				}
+				&:nth-child(4) {
+					.soc1als__layer {
+						span {
+							box-shadow: -1px 1px 3px #2867B2;
+						}
+					}
+				}
+				&:nth-child(5) {
+					.soc1als__layer {
+						span {
+							box-shadow: -1px 1px 3px #FF0000;
+						}
+					}
+				}
+				.soc1als__text {
+					bottom: -35px;
+					opacity: 1;
+				}
+			}
+			&:nth-child(1) {
+				.soc1als__layer {
+					span {
+						color: $color_2;
+						border-color: $border-color_1;
+					}
+				}
+				.soc1als__text {
+					color: $color_2;
+					border-color: $border-color_1;
+				}
+			}
+			&:nth-child(2) {
+				.soc1als__layer {
+					span {
+						color: $color_3;
+						border-color: $border-color_2;
+					}
+				}
+				.soc1als__text {
+					color: $color_3;
+					border-color: $border-color_2;
+				}
+			}
+			&:nth-child(3) {
+				.soc1als__layer {
+					span {
+						color: $color_4;
+						border-color: $border-color_3;
+					}
+				}
+				.soc1als__text {
+					color: $color_4;
+					border-color: $border-color_3;
+				}
+			}
+			&:nth-child(4) {
+				.soc1als__layer {
+					span {
+						color: $color_5;
+						border-color: $border-color_4;
+					}
+				}
+				.soc1als__text {
+					color: $color_5;
+					border-color: $border-color_4;
+				}
+			}
+			&:nth-child(5) {
+				.soc1als__layer {
+					span {
+						color: $color_6;
+						border-color: $border-color_5;
+					}
+				}
+				.soc1als__text {
+					color: $color_6;
+					border-color: $border-color_5;
+				}
+			}
+		}
+	}
+
+	&__text {
+		position: absolute;
+		left: 50%;
+		bottom: -5px;
+		opacity: 0;
+		transform: translateX(-50%);
+		transition: bottom 0.3s ease, opacity 0.3s ease;
 	}
 }
