--- a/css/styles.css
+++ b/css/styles.css
@@ -673,6 +673,7 @@ h4,
   height: auto;
   margin-inline: auto;
   border: 3px solid var(--color-purple);
+  box-shadow: 0 0 35px 1px var(--color-purple);
   border-radius: var(--border-radius);
   transform: scaleX(-1);
 }
@@ -692,6 +693,7 @@ h4,
   .hero__main {
     flex-direction: column;
     align-items: center;
+    row-gap: 30px;
   }
 }
 .hero__body {
