--- a/styles/blocks/_artwork.scss
+++ b/styles/blocks/_artwork.scss
@@ -3,6 +3,7 @@
 	height: auto;
 	margin-inline: auto;
 	border: 3px solid var(--color-purple);
+	box-shadow: 0 0 35px 1px var(--color-purple);
 	border-radius: var(--border-radius);
 	transform: scaleX(-1);
 }
