--- a/styles/blocks/_banner.scss
+++ b/styles/blocks/_banner.scss
@@ -29,76 +29,74 @@
 		}
 	}
 
-	&__image {
-		position: relative;
+	&__image-wrapper {
+		max-width: 740px;
+		width: 100%;
+		height: 560px;
 		display: flex;
 		justify-content: center;
-		align-items: end;
+		align-items: center;
+	}
 
-		&--services {
-			max-width: 740px;
-			width: 100%;
-			height: 560px;
-		}
-		
-		&--artists {
-			max-width: 630px;
-			width: 100%;
-			height: 458px;
+	&__image-box {
+			position: relative;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 
-		&-left,
-		&-right {
-			border-radius: 24px;
-			transition-duration: var(--transition-duration);
+		&__image-box &__image:nth-child(1) {
+		transform: translate(-10%, -70%);
+		width: 410px;
+		height: 400px;
+	}
+
+	&__image-box &__image:nth-child(2) {
+		transform: translate(-90%, -30%);
+		width: 410px;
+		height: 400px;
+	}
+
+	&__image {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		border-radius: 24px;
+		transition-duration: var(--transition-duration);
+		overflow: hidden;
 
 			@include hover {
 				scale: 1.05;
 			}
 
 			@include desktop {
-				max-width: 80%;
-				height: auto;
+				scale: .8;
+			}
+
+			@include tablet {
+				scale: 1;
 			}
 
 			@include mobile {
-				max-width: 50%;
-				height: auto;
-			}
-		}
-
-		&-left {
-			&--services {
-				position: absolute;
-				left: 0;
-				bottom: 0;
-				z-index: 1;
-			}
-
-			&--artists {
-				position: absolute;
-				top: 36px;
-				left: 24px;
-				rotate: -11deg;
-				border-radius: 20px;
+				scale: .7;
 			}
 			
+		} 
+
+		&__image img {
+			object-fit: fill;
+			border-radius: 24px;
 		}
 
-		&-right {
-			&--services {
-				position: absolute;
-				top: 0;
-				right: 0;
-			}
-
-			&--artists {
-				position: absolute;
-				right: 0;
-				bottom: 0;
-				z-index: 1;
-				border-radius: var(--border-radius-image);
-			}
+		&__image--one {
+				transform: translate(-60%, -70%) !important;
+				rotate: -12deg;
 		}
-	}
+		&__image--two {
+				transform: translate(-10%, -30%) !important;
+			
+		}
 }
