--- a/styles/blocks/_service-card.scss
+++ b/styles/blocks/_service-card.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	max-width: 410px;
 	min-height: 498px;
 	padding: 20px;
 	background-color: var(--color-dark-alt);
