--- a/css/styles.css
+++ b/css/styles.css
@@ -822,6 +822,10 @@ h4,
   color: var(--color-accent);
 }
 
+.agatmix-bg {
+  color: var(--color-purple);
+}
+
 .services__list {
   justify-self: center;
 }
